--- a/index.html
+++ b/index.html
@@ -46,13 +46,127 @@
                 </div>
             </nav>
         </header>
-        <div>
+        <div class="hero_section_container">
         <img src="./images/heroSectionLogo.png" alt="Zomato logo" class="hero_section_logo"/>
-        <h1>Discover the best food & drinks in PUNE</h1>
-        <div>
-            <input class="input" type="text" placeholder="PUNE"/>
-            <input class="input" type="text" placeholder="Search for a restaurant,cuisne or a dish"/>
+        <h1 class="hero_section_title">Discover the best food & drinks in PUNE</h1>
+        <div class="hero_section_input_container">
+            <a href="#" class="location_icon">
+                <i class="fa-solid fa-location-dot"></i>
+            </a>
+            <input class="input_container_location"  type="text" placeholder="PUNE"/>
+            <input class="input_container_search" type="text" placeholder="Search for a restaurant,cuisne or a dish"/>
+        
         </div>
+        </div>
+    </section>
+    <section class="container we_offer"> 
+        <div class="we_offer_card">
+             <img src="./images/item1.png" alt="Card 1 img"/>
+             <div class="we_offer_content">
+                <h2>order online</h2>
+                <p>Stay home and order to your doorstep</p>
+            </div>
+        </div>
+
+        <div class="we_offer_card">
+            <img src="./images/item2.png" alt="Card 2 img"/>
+            <div class="we_offer_content">
+               <h2>Dinning</h2>
+               <p>View the citys favourite Dinning venue</p>
+           </div>
+       </div>
+
+       <div class="we_offer_card">
+        <img src="./images/item3.png" alt="Card 3 img"/>
+        <div class="we_offer_content">
+           <h2>Nightlife and clubs</h2>
+           <p>Explore the citys top nightlife</p>
+       </div>
+   </div>
+
+   <div class="we_offer_card">
+    <img src="./images/item4.png" alt="Card 4 img"/>
+    <div class="we_offer_content">
+       <h2>order online</h2>
+       <p>Stay home and order to your doorstep</p>
+   </div>
+</div>
+
+
+    </section>
+    <section class="container colletions">
+<h1>Collection</h1>
+<div class="sub_heading_container">
+    <span>Explore curated list of top Restaurants,cafes,pubs in Pune based on trends</span>
+    <span>All collections in Pune</span>
+</div>
+<div class="collections_card_container">
+    <div class="card card1">
+        <div class="overlay"></div>
+        <div class="content">
+            <h4>Live Cricket screening</h4>
+            <span>56 places</span>
+        </div>
+    </div>
+
+    <div class="card card2">
+        <div class="overlay"></div>
+        <div class="content">
+            <h4>Malnad Special</h4>
+            <span>12 places</span>
+        </div>
+    </div>
+
+    <div class="card card3">
+        <div class="overlay"></div>
+        <div class="content">
+            <h4>Newly opened Restaurants</h4>
+            <span>36 places</span>
+        </div>
+    </div>
+
+    <div class="card card4">
+        <div class="overlay"></div>
+        <div class="content">
+            <h4>Trending Pubs Near me</h4>
+            <span>16 places</span>
+        </div>
+    </div>
+</div>
+
+    </section>
+
+    <section class="container get_the_app">
+        <div class="semicontainer">
+            <div class="left">
+                <img src="./images/mobileBanner.png" alt="Mobilr Bannner"/>
+            </div>
+            <div class="right">
+                <h1>Get the Zomato App</h1>
+                <p>We will send you a link,open it and download in your phone</p>
+                <div class="radio_button_container">
+                    <div>
+                        <input type="radio" id="email" name="download_app"/>
+                        <label for="email" style="font-size: 14px;">Email</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Phone" name="download_app"/>
+                        <label for="Phone" style="font-size: 14px;">Phone</label>
+                    </div>
+                </div>
+
+                <div class="input_container">
+                    <input type="text" placeholder="Email"/>
+                    <button>Share app link</button>
+                </div>
+                <div class="download_app_container">
+                    <h5>Download app from</h5>
+                    <div>
+                        <img src="./images/appleStore.png" alt="Apple store"/>
+                        <img src="./images/playStore.png" alt="Play store"/>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
